Agrego responsive a algunas paginas y agrego bootstrap

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,19 +11,18 @@
 
     <body>
         <header>
-            <header>
-                <div class="flexNavBar">
-                    <div class="logo"><img class="logoImagen" src="../img/pngwing.com.png" alt=""><a href="../index.html">FV Guitars</a></div>
-                    <nav>
-                        <ul class="navBar">
-                            <li><a href="../pages/productos.html">Productos</a></li>
-                            <li><a href="../pages/ofertas.html">Ofertas</a></li>
-                            <li><a href="../pages/marcas.html">Marcas</a></li>
-                            <li><a href="../pages/quienesSomos.html">¿Quienes somos?</a></li>
-                            <li><a href="../pages/contacto.html">Contacto</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <div class="flexNavBar">
+                <div class="logo"><img class="logoImagen" src="../img/pngwing.com.png" alt=""><a href="../index.html">FV Guitars</a></div>
+                <nav>
+                    <ul class="navBar">
+                        <li><a href="../pages/productos.html">Productos</a></li>
+                        <li><a href="../pages/ofertas.html">Ofertas</a></li>
+                        <li><a href="../pages/marcas.html">Marcas</a></li>
+                        <li><a href="../pages/quienesSomos.html">¿Quienes somos?</a></li>
+                        <li><a href="../pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
             <div class="banner"><img src="../img/Rectangle 2.png" alt=""></div>
             <div>
                 <ul class="brandBar">
@@ -36,6 +35,7 @@
                 </ul>
             </div>
         </header>
+
         <main>
             <div class="contactFlex">
                 <div class="contactBox">
@@ -53,6 +53,7 @@
                             <input type="text" id="mail" placeholder="Escribí acá tu correo electrónico">
                             <label for="consulta"><h2>Consulta</h2></label>
                             <input class="consulta" type="text" id="consulta" placeholder="Dejanos acá tu consulta">
+                            <input class="button" type="submit">
                         </form>
                     </div>
                 </div>
@@ -62,38 +63,45 @@
                 </div>
             </div>
         </main>
+
         <footer>
             <div class="footerBoxFlex">
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Información</p></div>
-                    <div class="footerBoxLista">
-                        <ul class="footerBoxListaUL">
-                            <li><a href="">Envios</a></li>
-                            <li><a href="">Sobre Nosotros</a></li>
-                            <li><a href="">Contacto</a></li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Locales</p></div>
-                    <div class="footerBoxLista">
-                        <ul>
-                            <li>Calle Falsa 123</li>
-                            <li>Dirección Inventada 1234</li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
-                    <div class="footerBoxLista">
-                        <ul class="footerBoxListaUL">
-                            <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/mail.png" alt=""></a></li>
-                        </ul>
-                    </div>
-                </section>
+                <div class="footerBox1">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Información</p></div>
+                        <div class="footerBoxLista">
+                            <ul class="footerBoxListaUL">
+                                <li><a href="">Envios</a></li>
+                                <li><a href="../pages/quienesSomos.html">Sobre Nosotros</a></li>
+                                <li><a href="">Contacto</a></li>
+                            </ul>
+                        </div>
+                </div>
+                    </section>
+                <div class="footerBox2">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Locales</p></div>
+                        <div class="footerBoxLista">
+                            <ul>
+                                <li>Calle Falsa 123</li>
+                                <li>Dirección Inventada 1234</li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
+                <div class="footerBox3">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
+                        <div class="footerBoxLista">
+                            <ul class="footerBoxListaUL">
+                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
             </div>
         </footer>
     </body>
