--- a/pages/producto.html
+++ b/pages/producto.html
@@ -35,62 +35,74 @@
                 </ul>
             </div>
         </header>
+
         <main>
             <section class="product">
-            <div class="productPhoto"><img src="../img/Rectangle 14.png" alt=""></div>
-            <div class="productTitle"><p>Fender Joe Strummer Road Worn Telecaster</p></div>
-            <div class="productSubtitle"><p>Solidbody Electric Guitar with Alder Body, Maple Neck, Rosewood Fingerboard and two single coil pickups - Road Worn.</p></div>
-            <div class="productPrice"><p>US$ 1.799</p></div>
-            <div class="productButton"><a href=""><p>Comprar</p></a></div>
-            <div class="productTitle"><p>Tech Specs</p></div>
-            <div class="productSpecsTitle"><p>Body</p></div>
-            <div class="productSpecsBody">
-                <p>Body Type: Solid Body</p>
-                <p>Body Shape: Telecaster</p>
-                <p>Body Material: Alder</p>
-                <p>Color: Road Worn Black</p>
-            </div>
-            <div class="productSpecsTitle"><p>Neck</p></div>
-            <div class="productSpecsBody">
-                <p>Neck Material: Maple</p>
-                <p>Neck Shape: '60s C</p>
-                <p>Neck Joint: Bolt-on</p>
-                <p>Fingerboard Material: Rosewood</p>
-            </div>
+                <div class="productPhoto"><img src="../img/Rectangle 14.png" alt=""></div>
+                <div class="productSpecs">
+                    <div class="productTitle"><p>Fender Joe Strummer Road Worn Telecaster</p></div>
+                    <div class="productSubtitle"><p>Solidbody Electric Guitar with Alder Body, Maple Neck, Rosewood Fingerboard and two single coil pickups - Road Worn.</p></div>
+                    <div class="productFlex">
+                        <div class="productPrice"><p>US$ 1.799</p></div>
+                        <div class="productButton"><a href=""><p>Comprar</p></a></div>
+                    </div>
+                    <div class="productTitle"><p>Tech Specs</p></div>
+                    <div class="productSpecsTitle"><p>Body</p></div>
+                    <div class="productSpecsBody">
+                        <p>Body Type: Solid Body</p>
+                        <p>Body Shape: Telecaster</p>
+                        <p>Body Material: Alder</p>
+                        <p>Color: Road Worn Black</p>
+                    </div>
+                    <div class="productSpecsTitle"><p>Neck</p></div>
+                    <div class="productSpecsBody">
+                        <p>Neck Material: Maple</p>
+                        <p>Neck Shape: '60s C</p>
+                        <p>Neck Joint: Bolt-on</p>
+                        <p>Fingerboard Material: Rosewood</p>
+                    </div>
+                </div>
             </section>
         </main>
+
         <footer>
             <div class="footerBoxFlex">
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Información</p></div>
-                    <div class="footerBoxLista">
-                        <ul class="footerBoxListaUL">
-                            <li><a href="">Envios</a></li>
-                            <li><a href="">Sobre Nosotros</a></li>
-                            <li><a href="">Contacto</a></li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Locales</p></div>
-                    <div class="footerBoxLista">
-                        <ul>
-                            <li>Calle Falsa 123</li>
-                            <li>Dirección Inventada 1234</li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
-                    <div class="footerBoxLista">
-                        <ul class="footerBoxListaUL">
-                            <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/mail.png" alt=""></a></li>
-                        </ul>
-                    </div>
-                </section>
+                <div class="footerBox1">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Información</p></div>
+                        <div class="footerBoxLista">
+                            <ul class="footerBoxListaUL">
+                                <li><a href="">Envios</a></li>
+                                <li><a href="../pages/quienesSomos.html">Sobre Nosotros</a></li>
+                                <li><a href="../pages/contacto.html">Contacto</a></li>
+                            </ul>
+                        </div>
+                </div>
+                    </section>
+                <div class="footerBox2">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Locales</p></div>
+                        <div class="footerBoxLista">
+                            <ul>
+                                <li>Calle Falsa 123</li>
+                                <li>Dirección Inventada 1234</li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
+                <div class="footerBox3">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
+                        <div class="footerBoxLista">
+                            <ul class="footerBoxListaUL">
+                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
             </div>
         </footer>
     </body>
