--- a/pages/productos.html
+++ b/pages/productos.html
@@ -35,6 +35,7 @@
                 </ul>
             </div>
         </header>
+
         <main>
             <div class="productBoxFlex">
                 <section class="productBox">
@@ -63,40 +64,47 @@
                 </section>
             </div>
         </main>
+
         <footer>
             <div class="footerBoxFlex">
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Información</p></div>
-                    <div class="footerBoxLista">
-                        <ul class="footerBoxListaUL">
-                            <li><a href="">Envios</a></li>
-                            <li><a href="">Sobre Nosotros</a></li>
-                            <li><a href="">Contacto</a></li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Locales</p></div>
-                    <div class="footerBoxLista">
-                        <ul>
-                            <li>Calle Falsa 123</li>
-                            <li>Dirección Inventada 1234</li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="footerBox">
-                    <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
-                    <div class="footerBoxLista">
-                        <ul class="footerBoxListaUL">
-                            <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                            <li><a href=""><img src="../img/mail.png" alt=""></a></li>
-                        </ul>
-                    </div>
-                </section>
+                <div class="footerBox1">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Información</p></div>
+                        <div class="footerBoxLista">
+                            <ul class="footerBoxListaUL">
+                                <li><a href="">Envios</a></li>
+                                <li><a href="../pages/quienesSomos.html">Sobre Nosotros</a></li>
+                                <li><a href="../pages/contacto.html">Contacto</a></li>
+                            </ul>
+                        </div>
+                </div>
+                    </section>
+                <div class="footerBox2">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Locales</p></div>
+                        <div class="footerBoxLista">
+                            <ul>
+                                <li>Calle Falsa 123</li>
+                                <li>Dirección Inventada 1234</li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
+                <div class="footerBox3">
+                    <section class="footerBox">
+                        <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
+                        <div class="footerBoxLista">
+                            <ul class="footerBoxListaUL">
+                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
             </div>
-        </footer>
+        </footer>    
     </body>
 
 </html>
