--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -45,16 +45,10 @@
         <main class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col col-xxl-8">
-                    <div class="row"><h1>¿Quienes Somos?</h1></div>
+                    <div class="row"><h1 class="qh1">¿Quienes Somos?</h1></div>
                     <div class="row qText">
                         <div class="col">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
                         </div>
                     </div>
@@ -70,64 +64,47 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
                         </div>
                     </div>
                     <div class="row qText">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum solutaLorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus sed, quia quae fugit cupiditate incidunt officia accusamus! Illum soluta excepturi labore earum fugiat nulla vel voluptate voluptates quasi? Cum!</p>
                     </div>
                 </div>
             </div>
         </main>
 
-        <footer>
-            <div class="footerBoxFlex">
-                <div class="footerBox1">
-                    <section class="footerBox">
-                        <div class="footerBoxTitulo"><p>Información</p></div>
-                        <div class="footerBoxLista">
-                            <ul class="footerBoxListaUL">
-                                <li><a href="">Envios</a></li>
-                                <li><a href="">Sobre Nosotros</a></li>
-                                <li><a href="../pages/contacto.html">Contacto</a></li>
-                            </ul>
-                        </div>
+        <footer class="footerBoot container-fluid text-center">
+            <div class="row justify-content-center">
+                <div class="col-xxl-3 col-md-3 col-12">
+                    <div class="row align-items-center footerBootTitulo">
+                        <p>Información</p>
+                    </div>
+                    <ul class="row footerBootLista justify-content-center">
+                        <li class="col-3 col-md-3 col-xxl-2"><a href="">Envios</a></li>
+                        <li class="col-5 col-md-5 col-xxl-3"><a href="">Sobre Nosotros</a></li>
+                        <li class="col-3 col-md-3 col-xxl-2"><a href="../pages/contacto.html">Contacto</a></li>
+                    </ul>
                 </div>
-                    </section>
-                <div class="footerBox2">
-                    <section class="footerBox">
-                        <div class="footerBoxTitulo"><p>Locales</p></div>
-                        <div class="footerBoxLista">
-                            <ul>
-                                <li>Calle Falsa 123</li>
-                                <li>Dirección Inventada 1234</li>
-                            </ul>
-                        </div>
-                    </section>
+                <div class="col-xxl-3 col-md-3 col-12">
+                    <div class="row footerBootTitulo align-items-center">
+                        <p>Locales</p>
+                    </div>
+                    <ul class="row footerBootLista align-items-center">
+                        <li>Calle Falsa 123</li>
+                        <li>Dirección Inventada 1234</li>
+                    </ul>
                 </div>
-                <div class="footerBox3">
-                    <section class="footerBox">
-                        <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
-                        <div class="footerBoxLista">
-                            <ul class="footerBoxListaUL">
-                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
-                            </ul>
-                        </div>
-                    </section>
+                <div class="col-xxl-3 col-md-3 col-12">
+                    <div class="row footerBootTitulo align-items-center">
+                        <p>Seguinos en nuestras redes</p>
+                    </div>
+                    <ul class="row footerBootLista justify-content-center">
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/instagram.png" alt=""></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/facebook.png" alt=""></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/telefono.png" alt=""></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/mail.png" alt=""></a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
