implementacion de variables y SEO en el codigo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Contactate con nuestros expertos si queres comprar tu próxima guitarra profesional">
+        <meta name="author" content="Federico Asta">
+        <meta name="copyright" content="FV Guitars S.A.">
+        <meta property="og:title" content="FV Guitars">
+        <meta property="og:description" content="Tienda de música en Buenos Aires orientada a guitarras de nivel profesional.">
+        <meta property="og:image" content="https://ibb.co/6NT8WqW">
+        <meta property="og:url" content="https://federicoasta.github.io/proyecto-coderhouse-desarrolloweb/">
         <title>FV Guitars  |  Contacto</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="../img/pngwing.com.png" type="image/x-icon">
@@ -23,15 +30,15 @@
                     </ul>
                 </nav>
             </div>
-            <div class="banner"><img src="../img/Rectangle 2.png" alt=""></div>
+            <div class="banner"><img src="../img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/123.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/33.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/44.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt=""></a></li>
+                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
@@ -59,7 +66,7 @@
                 </div>
                 <div class="contactBox">
                     <h1>Locales</h1>
-                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1359032956166!2d-73.98329298426955!3d40.759035542673146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258ff3a7b64cb%3A0x8862b7e430710e32!2sMidtown%20Manhattan%2C%20Nueva%20York%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1664159332081!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1359032956166!2d-73.98329298426955!3d40.759035542673146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258ff3a7b64cb%3A0x8862b7e430710e32!2sMidtown%20Manhattan%2C%20Nueva%20York%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1664159332081!5m2!1ses-419!2sar" width="600" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </main>
@@ -94,10 +101,10 @@
                         <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
                         <div class="footerBoxLista">
                             <ul class="footerBoxListaUL">
-                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
+                                <li><a href=""><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
+                                <li><a href=""><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
+                                <li><a href=""><img src="../img/mail.png" alt="Logo Mail"></a></li>
                             </ul>
                         </div>
                     </section>
