--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Las mejores marcas reconocidas a nivel mundial. Fender, Gibson, Suhr, PRS y más.">
+        <meta name="author" content="Federico Asta">
+        <meta name="copyright" content="FV Guitars S.A.">
+        <meta property="og:title" content="FV Guitars">
+        <meta property="og:description" content="Tienda de música en Buenos Aires orientada a guitarras de nivel profesional.">
+        <meta property="og:image" content="https://ibb.co/6NT8WqW">
+        <meta property="og:url" content="https://federicoasta.github.io/proyecto-coderhouse-desarrolloweb/">
         <title>FV Guitars  |  Marcas</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="../img/pngwing.com.png" type="image/x-icon">
@@ -23,15 +30,15 @@
                     </ul>
                 </nav>
             </div>
-            <div class="banner"><img src="../img/Rectangle 2.png" alt=""></div>
+            <div class="banner"><img src="../img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/123.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/33.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/44.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt=""></a></li>
+                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
@@ -41,43 +48,43 @@
                 <section class="productBox">
                     <div>
                         <p>Fender</p>
-                        <a href=""><img src="../img/Rectangle 9.png" alt=""></a>
+                        <a href=""><img src="../img/Rectangle 9.png" alt="Imagen Fender"></a>
                     </div>
                 </section>
                 <section class="productBox">
                     <div>
                         <p>Gibson</p>
-                        <a href=""><img src="../img/Rectangle 10.png" alt=""></a>
+                        <a href=""><img src="../img/Rectangle 10.png" alt="Imagen Gibson"></a>
                     </div>
                 </section>
                 <section class="productBox">
                     <div>
                         <p>Paul Reed Smith</p>
-                        <a href=""><img src="../img/Rectangle 11.png" alt=""></a>
+                        <a href=""><img src="../img/Rectangle 11.png" alt="Imagen PRS"></a>
                     </div>
                 </section>
                 <section class="productBox">
                     <div>
                         <p>Marshall</p>
-                        <a href=""><img src="../img/Rectangle 12.png" alt=""></a>
+                        <a href=""><img src="../img/Rectangle 12.png" alt="Imagen Marshall"></a>
                     </div>
                 </section>
                 <section class="productBox">
                     <div>
                         <p>Martin</p>
-                        <a href=""><img src="../img/Rectangle 13.png" alt=""></a>
+                        <a href=""><img src="../img/Rectangle 13.png" alt="Imagen Guitarra Martin"></a>
                     </div>
                 </section>
                 <section class="productBox">
                     <div>
                         <p>Epiphone</p>
-                        <a href=""><img src="../img/Rectangle 16.png" alt=""></a>
+                        <a href=""><img src="../img/Rectangle 16.png" alt="Imagen Epiphone"></a>
                     </div>
                 </section>
                 <section class="productBox">
                     <div>
                         <p>Ernie Ball</p>
-                        <a href=""><img src="../img/Rectangle 15.png" alt=""></a>
+                        <a href=""><img src="../img/Rectangle 15.png" alt="Imagen Accesorios Ernie Ball"></a>
                     </div>
                 </section>
             </div>
@@ -113,10 +120,10 @@
                         <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
                         <div class="footerBoxLista">
                             <ul class="footerBoxListaUL">
-                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
+                                <li><a href=""><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
+                                <li><a href=""><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
+                                <li><a href=""><img src="../img/mail.png" alt="Logo Mail"></a></li>
                             </ul>
                         </div>
                     </section>
