--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Descuentos de hasta 50% en tu próxima guitarra eléctrica profesional">
+        <meta name="author" content="Federico Asta">
+        <meta name="copyright" content="FV Guitars S.A.">
+        <meta property="og:title" content="FV Guitars">
+        <meta property="og:description" content="Tienda de música en Buenos Aires orientada a guitarras de nivel profesional.">
+        <meta property="og:image" content="https://ibb.co/6NT8WqW">
+        <meta property="og:url" content="https://federicoasta.github.io/proyecto-coderhouse-desarrolloweb/">
         <title>FV Guitars  |  Ofertas</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="../img/pngwing.com.png" type="image/x-icon">
@@ -23,15 +30,15 @@
                     </ul>
                 </nav>
             </div>
-            <div class="banner"><img src="../img/Rectangle 2.png" alt=""></div>
+            <div class="banner"><img src="../img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/123.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/33.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/44.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt=""></a></li>
+                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
@@ -40,61 +47,61 @@
             <div><h1>Ofertas</h1></div>
             <div class="cardFlex">
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 1.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 1.png" alt="Fender Joe Strummer Road Worn Telecaster"></div>
                     <div class="cardText"><p>Fender Joe Strummer Road Worn Telecaster</p></div>
                     <div class="cardPrice"><p>US$ 1.799</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 2.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 2.png" alt="PRS SE Hollow Body"></div>
                     <div class="cardText"><p>PRS SE Hollow Body</p></div>
                     <div class="cardPrice"><p>US$ 2.399</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 3.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 3.png" alt="Epiphone Noel Gallagher"></div>
                     <div class="cardText"><p>Epiphone Noel Gallagher</p></div>
                     <div class="cardPrice"><p>US$ 1.100</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 4.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 4.png" alt="PRS Wood Library DGT"></div>
                     <div class="cardText"><p>PRS Wood Library DGT</p></div>
                     <div class="cardPrice"><p>US$ 3.199</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 5.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 5.png" alt="Gibson SG Vintage Cherry"></div>
                     <div class="cardText"><p>Gibson SG Vintage Cherry</p></div>
                     <div class="cardPrice"><p>US$ 999</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 1.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 1.png" alt="Fender Joe Strummer Road Worn Telecaster"></div>
                     <div class="cardText"><p>Fender Joe Strummer Road Worn Telecaster</p></div>
                     <div class="cardPrice"><p>US$ 1.799</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 2.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 2.png" alt="PRS SE Hollow Body"></div>
                     <div class="cardText"><p>PRS SE Hollow Body</p></div>
                     <div class="cardPrice"><p>US$ 2.399</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 3.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 3.png" alt="Epiphone Noel Gallagher"></div>
                     <div class="cardText"><p>Epiphone Noel Gallagher</p></div>
                     <div class="cardPrice"><p>US$ 1.100</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 4.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 4.png" alt="PRS Wood Library DGT"></div>
                     <div class="cardText"><p>PRS Wood Library DGT</p></div>
                     <div class="cardPrice"><p>US$ 3.199</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
                 </section>
                 <section class="card">
-                    <div class="cardImg"><img src="../img/image 5.png" alt=""></div>
+                    <div class="cardImg"><img src="../img/image 5.png" alt="Gibson SG Vintage Cherry"></div>
                     <div class="cardText"><p>Gibson SG Vintage Cherry</p></div>
                     <div class="cardPrice"><p>US$ 999</p></div>
                     <div class="cardButton"><a href="../pages/producto.html"><p>Comprar</p></a></div>
@@ -132,10 +139,10 @@
                         <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
                         <div class="footerBoxLista">
                             <ul class="footerBoxListaUL">
-                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
+                                <li><a href=""><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
+                                <li><a href=""><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
+                                <li><a href=""><img src="../img/mail.png" alt="Logo Mail"></a></li>
                             </ul>
                         </div>
                     </section>
