--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Tienda de música fundada en 2022 en Buenos Aires. Tenemos todo lo que necesitas para hacer explotar tu potencial.">
+        <meta name="author" content="Federico Asta">
+        <meta name="copyright" content="FV Guitars S.A.">
+        <meta property="og:title" content="FV Guitars">
+        <meta property="og:description" content="Tienda de música en Buenos Aires orientada a guitarras de nivel profesional.">
+        <meta property="og:image" content="https://ibb.co/6NT8WqW">
+        <meta property="og:url" content="https://federicoasta.github.io/proyecto-coderhouse-desarrolloweb/">
         <title>FV Guitars  |  ¿Quienes somos?</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
@@ -15,7 +22,7 @@
             <div class="navBarBoot container-fluid text-center">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-3 col-xxl-2 logoBoot">
-                        <img class="logoImagen" src="../img/pngwing.com.png" alt="">
+                        <img class="logoImagen" src="../img/pngwing.com.png" alt="Logo FV Guitars">
                         <a href="../index.html">FV Guitars</a>
                     </div>
                     <nav class="col-12 col-md-9 col-xxl-6">
@@ -29,15 +36,15 @@
                     </nav>
                 </div>
             </div>
-            <div class="container-fluid banner"><img src="../img/Rectangle 2.png" alt=""></div>
+            <div class="container-fluid banner"><img src="../img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/123.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/33.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/44.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt=""></a></li>
+                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
@@ -56,7 +63,7 @@
                         <div class="col-md-6 d-none d-sm-block">
                             <div class="row align-items-center h-100">
                                 <div class="col">
-                                    <img src="../img/Rectangle 17.png" alt="">
+                                    <img src="../img/Rectangle 17.png" alt="Imagen Guitarra de la tienda">
                                 </div>
                             </div>
                         </div>
@@ -100,10 +107,10 @@
                         <p>Seguinos en nuestras redes</p>
                     </div>
                     <ul class="row footerBootLista justify-content-center">
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/mail.png" alt=""></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
+                        <li class="col-2 col-md-2 col-xxl-1"><a href=""><img src="../img/mail.png" alt="Logo Mail"></a></li>
                     </ul>
                 </div>
             </div>
