--- a/pages/producto.html
+++ b/pages/producto.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Fender Joe Strummer Road Worn Telecaster. Tu próximo instrumento profesional en FV Guitars.">
+        <meta name="author" content="Federico Asta">
+        <meta name="copyright" content="FV Guitars S.A.">
+        <meta property="og:title" content="FV Guitars">
+        <meta property="og:description" content="Tienda de música en Buenos Aires orientada a guitarras de nivel profesional.">
+        <meta property="og:image" content="https://ibb.co/6NT8WqW">
+        <meta property="og:url" content="https://federicoasta.github.io/proyecto-coderhouse-desarrolloweb/">
         <title>FV Guitars  |  Comprar</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="../img/pngwing.com.png" type="image/x-icon">
@@ -23,22 +30,22 @@
                     </ul>
                 </nav>
             </div>
-            <div class="banner"><img src="../img/Rectangle 2.png" alt=""></div>
+            <div class="banner"><img src="../img/Rectangle 2.png" alt="Imagen Guitarrista Banner"></div>
             <div>
                 <ul class="brandBar">
-                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/123.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/33.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/44.png" alt=""></a></li>
-                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt=""></a></li>
+                    <li><a href=""><img class="brandImg" src="../img/fender.png" alt="Logo Fender"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/gibson.png" alt="Logo Gibson"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/123.png" alt="Logo PRS"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/33.png" alt="Logo Suhr"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/44.png" alt="Logo Epiphone"></a></li>
+                    <li><a href=""><img class="brandImg"src="../img/marshall.png" alt="Logo Marshall"></a></li>
                 </ul>
             </div>
         </header>
 
         <main>
             <section class="product">
-                <div class="productPhoto"><img src="../img/Rectangle 14.png" alt=""></div>
+                <div class="productPhoto"><img src="../img/Rectangle 14.png" alt="Imagen Fender Joe Strummer Road Worn Telecaster"></div>
                 <div class="productSpecs">
                     <div class="productTitle"><p>Fender Joe Strummer Road Worn Telecaster</p></div>
                     <div class="productSubtitle"><p>Solidbody Electric Guitar with Alder Body, Maple Neck, Rosewood Fingerboard and two single coil pickups - Road Worn.</p></div>
@@ -95,10 +102,10 @@
                         <div class="footerBoxTitulo"><p>Seguinos en nuestras redes</p></div>
                         <div class="footerBoxLista">
                             <ul class="footerBoxListaUL">
-                                <li><a href=""><img src="../img/instagram.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/facebook.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/telefono.png" alt=""></a></li>
-                                <li><a href=""><img src="../img/mail.png" alt=""></a></li>
+                                <li><a href=""><img src="../img/instagram.png" alt="Logo Instagram"></a></li>
+                                <li><a href=""><img src="../img/facebook.png" alt="Logo Facebook"></a></li>
+                                <li><a href=""><img src="../img/telefono.png" alt="Logo Telefono"></a></li>
+                                <li><a href=""><img src="../img/mail.png" alt="Logo Mail"></a></li>
                             </ul>
                         </div>
                     </section>
